# faster_deployment

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  readme.md
1_learn_trt/: readme.md
1_learn_trt/trt_plugin/: 新建插件.md
1_learn_trt/trt_plugin/demo01/: demo01.cu  demo01.h
1_learn_trt/trt_rtdetr/: readme.md  rtdetr_onnx.py
1_learn_trt/trt_yolox/cpp/: CMakeLists.txt  yolox.cpp  yolox_end2end.cpp
1_learn_trt/trt_yolox/py/: tools.py
1_trt_base/trt_demo/trt_cpp/: cookbookHelper.cuh
1_trt_base/trt_demo/trt_py/: trt_python.py
1_trt_base/trt_plugin/demo01/: CMakeLists.txt
1_trt_base/trt_plugin/yolox_end2end/: CMakeLists.txt  end2end.md
1_trt_base/trt_rtdetr/: rtdetr_trt.py
1_trt_base/trt_yolox/: readme.md
1_trt_base/trt_yolox/cpp/: yolox.cpp
1_trt_base/trt_yolox/py/: trt.py  trt_end2end.py
2_faster_tensorrt/: CMakeLists.txt  readme.md
2_faster_tensorrt/include/: cuda_kernel.cuh  infer_base.hpp  memory_tensor.hpp  monopoly_accocator.hpp  tools.hpp  yolo.hpp
2_faster_tensorrt/src/: 0un_used_code.cpp  cuda_kernel.cu  infer_base.cpp  main.cpp  memory_tensor.cpp  yolo.cpp
2_faster_tensorrt/src/apps/: common.hpp
2_faster_tensorrt/src/apps/rtdetr/: rtdetr.cpp  rtdetr.h
2_faster_tensorrt/src/apps/yolo/: yolo.cpp  yolo.h  yolo.hpp
2_faster_tensorrt/src/apps/yolox/: yolo.cpp  yolo.hpp
2_faster_tensorrt/src/base/: infer_base.cpp  infer_base.hpp  memory_tensor.cpp  memory_tensor.hpp  monopoly_accocator.hpp  tools.hpp  trt_base.cpp  trt_base.hpp
2_faster_tensorrt/src/eval/: eval.cpp  eval.py  eval_results.json  get_imgid_txt.py  img_id.txt  results.txt  save.hpp
2_faster_tensorrt/src/kernels/: cuda_kernel.cu  cuda_kernel.cuh
2_faster_tensorrt/src/onnx_model/: rtdetr_sim_export_trt.py  v8onnx_tranpose.py
3_faster_ncnn/: CMakeLists.txt  model.param  readme.md
3_faster_ncnn/include/: det.h  infer.h  mylogger.hpp
3_faster_ncnn/src/: det.cpp  infer.cpp  main.cpp
3_faster_ncnn/src/apps/: common.cpp  common.h
3_faster_ncnn/src/apps/yolo/: yolo.cpp  yolo.h
3_faster_ncnn/src/base/: infer_base.hpp  tools.hpp
trt_demo/files/: model.onnx  model_cpp.engine  model_py.engine
trt_demo/trt_cpp/: CMakeLists.txt  main.cpp
trt_demo/trt_py/: model2onnx.py  trt_python.py
trt_plugin/demo01/: CMakeLists.txt  test.py
